--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,6 +17,17 @@
 		<filter-class>com.cos.hello.config.AttackFilter</filter-class>
 	</filter>
 	
+	<filter>
+		<filter-name>joinFilter</filter-name>
+		<filter-class>com.cos.hello.config.JoinFilter</filter-class>
+	</filter>
+	
+	<filter>
+		<filter-name>loginFilter</filter-name>
+		<filter-class>com.cos.hello.config.LoginFilter</filter-class>
+	</filter>
+	
+	
 	<filter-mapping>
 		<filter-name>charFilter</filter-name>
 		<url-pattern>/*</url-pattern>
@@ -27,7 +38,15 @@
 		<url-pattern>/user</url-pattern>
 	</filter-mapping>
 	
+	<filter-mapping>
+		<filter-name>joinFilter</filter-name>
+		<url-pattern>/user</url-pattern>
+	</filter-mapping>
 	
+	<filter-mapping>
+		<filter-name>loginFilter</filter-name>
+		<url-pattern>/user</url-pattern>
+	</filter-mapping>
 	
 <description>MySQL Test App</description>
   <resource-ref>
